[package]
name = "rpc-servers"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
http = { package = "jsonrpc-http-server", version = "12.0.0" }
pubsub = { package = "jsonrpc-pubsub", version = "12.0.0" }
ws = { package = "jsonrpc-ws-server", version = "12.0.0" }
log = "0.4"
serde = "1.0"
rpc = { path = "../rpc" }
