[package]
name = "rpc"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
derive_more = "0.14.0"
jsonrpc-core = "12.0.0"
jsonrpc-core-client = "12.0.0"
jsonrpc-pubsub = "12.0.0"
jsonrpc-derive = "12.0.0"
log = "0.4"
parking_lot = "0.8.0"
parity-codec = "3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1.7"
rustc-hex = "2.0"

lru = "0.1.16"
lazy_static = "1.3.0"

# substrate
client = { package = "substrate-client", path = "../vendor/substrate/core/client" }
executor = { package = "substrate-executor", path = "../vendor/substrate/core/executor" }
network = { package = "substrate-network", path = "../vendor/substrate/core/network" }
primitives = { package = "substrate-primitives", path = "../vendor/substrate/core/primitives" }
transaction_pool = { package = "substrate-transaction-pool", path = "../vendor/substrate/core/transaction-pool" }
runtime_primitives = { package = "sr-primitives", path = "../vendor/substrate/core/sr-primitives" }

[dev-dependencies]
assert_matches = "1.1"
futures = "0.1.17"
